--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Startup HTML template OptimizedHTML 5">
+    <link rel="icon" href="">
+    <!-- Chrome, Firefox OS and Opera -->
+	<meta name="theme-color" content="#000">
+	<!-- Windows Phone -->
+	<meta name="msapplication-navbutton-color" content="#000">
+	<!-- iOS Safari -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="#000">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-5">Lorem ipsum dolor sit amet.</div>
+            <div class="col-2">Lorem ipsum dolor sit amet.</div>
+            <div class="col-5">Lorem ipsum dolor sit amet.</div>
+        </div>
+    </div>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
